# hashdozen

./: Cargo.toml  README.md
src/: hashdozen.rs  lib.rs  main.rs
